chore(backend): consolidate nixpacks configuration and remove runtime.txt
- Add explicit nixpacks build configuration with Python 3.11 and gcc
- Include apt packages specification for python3-pip
- Define pip install command for dependency management
- Remove watchPatterns configuration from build section
- Delete runtime.txt file as Python version now specified in railway.toml
- Simplify railway.toml by consolidating all build settings in one place

--- a/railway.toml
+++ b/railway.toml
@@ -1,15 +1,13 @@
 # Railway configuration for Backend (FastAPI)
 [build]
 builder = "nixpacks"
-watchPatterns = ["*.py", "requirements.txt"]
+
+[build.nixpacks]
+nixPkgs = ["python311", "gcc"]
+aptPkgs = ["python3-pip"]
+installCmd = "pip install -r requirements.txt"
 
 [deploy]
 startCommand = "uvicorn main:app --host 0.0.0.0 --port $PORT"
 restartPolicyType = "on_failure"
 restartPolicyMaxRetries = 10
-
-# Environment variables (set these in Railway dashboard)
-# OPENAI_API_KEY
-# SUPABASE_URL
-# SUPABASE_KEY
-# CORS_ORIGINS (comma-separated: https://your-frontend.railway.app,https://yourdomain.com)
